--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>济南市市中区泉海学校2024级7班三组</h1>
+        <h1 style="color: white !important;">济南市市中区泉海学校2024级7班三组</h1>
         <nav>
             <ul>
                 <li><a href="#home">首页</a></li>
